--- a/Andrius_django/tasks/templates/base.html
+++ b/Andrius_django/tasks/templates/base.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}TASker{% endblock title %}</title>
+    <title>{% block title %}TASKer{% endblock title %}</title>
 </head>
 <body>
+    <header>
+        <span class="logo">TASKer</span>
+        <ul class="nav">
+            <li><a href="{% url "index" %}">Dashboard</a></li>
+            <li><a href="{% url "task_list" %}">Tasks</a></li>
+        </ul>
+    </header>
+    <section class="messages">
+        {% for message in messages %}
+            <p class="message message-{{ message.tags }}">{{ message }}</p>
+        {% endfor %}
+    </section>
     <main>{% block content %}{% endblock content %}</main>
 </body>
 </html>
