--- a/Andrius_django/tasks/templates/base.html
+++ b/Andrius_django/tasks/templates/base.html
@@ -11,6 +11,7 @@
         <span class="logo">TASKer</span>
         <ul class="nav">
             <li><a href="{% url "index" %}">{% trans "dashboard"|capfirst %}</a></li>
+            <li><a href="{% url "project_list" %}">{% trans "projects"|capfirst %}</a></li>
             <li><a href="{% url "task_list" %}">{% trans "tasks"|capfirst %}</a></li>
         </ul>
         <span class="spacer"></span>
