--- a/Andrius_django/tasks/static/css/style.css
+++ b/Andrius_django/tasks/static/css/style.css
@@ -181,3 +181,14 @@ button:hover, .button:hover {
 .toolbar {
     margin: 0.5rem;
 }
+.toolbar {
+    margin: 0.5rem;
+}
+
+.toolbar form {
+    display: inline;
+}
+
+.toolbar form select {
+    padding: 0.4rem;
+}
