--- a/Andrius_django/tasks/templates/tasks/project_list.html
+++ b/Andrius_django/tasks/templates/tasks/project_list.html
@@ -4,6 +4,16 @@
 <h1>{% trans "projects"|capfirst %}</h1>
 <div class="toolbar">
     <a class="button" href="{% url "project_create" %}">{% trans "create new"|capfirst %}</a>
+    <form method="get" action="{{ request.path }}">
+        <select name="owner" onchange="this.form.submit();">
+            {% for user in user_list  %}
+                <option value="{{ user.username }}" {% if user.username == request.GET.owner %}selected{% endif %}>
+                    {{ user.first_name }} {{ user.last_name }}
+                    ({{ user.username }})
+                </option>
+            {% endfor %}
+        </select>
+    </form>
 </div>
 <ul>
 {% for project in project_list %}
